# djust-auth

./: CONTRIBUTING.md  MIGRATION.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  release.yml  test.yml
docs/: oidc-integration.md
src/djust_auth/: __init__.py  admin_views.py  apps.py  djust_admin.py  forms.py  mixins.py  social.py  urls.py  views.py
src/djust_auth/templates/djust_auth/admin/: providers.html  social_accounts.html
src/djust_auth/templates/djust_auth/admin/widgets/: auth_summary.html
src/djust_auth/templates/djust_auth/includes/: oauth_buttons.html
tests/: conftest.py  test_forms.py  test_mixins.py  test_views.py
