[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djust-auth"
version = "0.3.0"
description = "Authentication views and mixins for djust applications"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
]

[project.optional-dependencies]
oauth = ["django-allauth>=0.60"]
test = [
    "pytest",
    "pytest-django",
]

[tool.hatch.build.targets.wheel]
packages = ["src/djust_auth"]
