[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djust-auth"
version = "99.0.0"
description = "DEPRECATED: use `pip install djust` instead."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "djust>=0.5.6rc1",
]

[project.urls]
Homepage = "https://djust.org"
Repository = "https://github.com/djust-org/djust-auth"

[tool.hatch.build.targets.wheel]
packages = ["src/djust_auth"]
